--- a/WordPress/src/main/res/layout/my_site_fragment_motion_layout_custom_header.xml
+++ b/WordPress/src/main/res/layout/my_site_fragment_motion_layout_custom_header.xml
@@ -1,25 +1,31 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--- The layout does not include the default my site card margins on the root layout as the quick start dot,
- (to be shown on the site icon layout) extends beyond the card margins and was found to cut off outside it.
- The margins are applied to the icon container rather than on the card. -->
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<org.wordpress.android.ui.mysite.CollapsibleToolbar xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/motionLayout"
+    app:layoutDescription="@xml/my_site_fragment_motion_layout_scene"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingEnd="@dimen/margin_medium_large"
-    android:visibility="gone"
-    tools:ignore="RtlSymmetry">
+    android:minHeight="50dp"
+    android:fitsSystemWindows="false"
+    app:layout_scrollFlags="scroll|enterAlways|snap|exitUntilCollapsed">
 
-    <com.google.android.material.appbar.MaterialToolbar
-        android:id="@+id/toolbar_main"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        app:layout_collapseMode="pin"
+
+    <ImageView
+        android:id="@+id/avatar"
+        android:layout_marginTop="10dp"
+        android:layout_width="@dimen/avatar_sz_small"
+        android:layout_height="@dimen/avatar_sz_small"
+        android:layout_marginEnd="@dimen/me_menu_avatar_end_offset"
+        android:background="?android:attr/actionBarItemBackground"
+        android:contentDescription="@null"
+        android:foreground="@drawable/bg_oval_transparent_stroke_on_surface_lowest"
+        android:maxHeight="@dimen/avatar_sz_medium"
+        android:minHeight="@dimen/avatar_sz_small"
+        android:padding="@dimen/me_avatar_padding"
+        android:src="@drawable/ic_user_white_24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:theme="@style/WordPress.ActionBar" />
-
+        tools:ignore="UnusedAttribute" />
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/blavatar_container"
@@ -32,7 +38,7 @@
         app:cardElevation="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar_main"
+        app:layout_constraintTop_toBottomOf="@+id/avatar"
         app:strokeColor="@color/on_surface_emphasis_lowest"
         app:strokeWidth="@dimen/my_site_blavatar_container_border_width">
 
@@ -88,7 +94,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/switch_site"
         app:layout_constraintStart_toEndOf="@id/blavatar_container"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar_main" />
+        app:layout_constraintTop_toTopOf="@+id/blavatar_container" />
 
     <org.wordpress.android.widgets.QuickStartFocusPoint
         android:id="@+id/quick_start_title_focus_point"
@@ -112,7 +118,7 @@
         android:src="@drawable/ic_chevron_down_white_24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar_main"
+        app:layout_constraintTop_toTopOf="@+id/blavatar_container"
         app:tint="?attr/wpColorOnSurfaceMedium" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</org.wordpress.android.ui.mysite.CollapsibleToolbar>
